tests/haste_dupe_packages/haste_dupe_packages.exp
Error ------------------------------------------------------------------------------------------- b/pkg/package.json:1:1

Duplicate module provider for `pkg`. Change either the name of this file or the name of the current module provider [1].
[duplicate-module]

   b/pkg/package.json:1:1
   1| {
      

References:
   a/pkg/package.json:1:1
   1| {
       [1]


Error ------------------------------------------------------------------------------------------------------ test.js:8:1

Cannot cast `pkg` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:8:1
   8| pkg as empty;
      ^^^

References:
   a/pkg/index.js:1:16
   1| export default 123;
                     ^^^ [1]
   test.js:8:8
   8| pkg as empty;
             ^^^^^ [2]



Found 2 errors
